@@ -189,6 +189,7 @@ specify-all-reserved: no
 # Value: Word to be taken out of the reserved words list
 # (case independent)
 # Words that are in the (proposed) standard but may conflict
+not-reserved: TERMINAL
 
 # reserved:
 # Value: Word to make up reserved words list (case independent)
